--- a/docs/ FusionInventory_for_GLPI/  Installation & update/1.installation.md
+++ b/docs/ FusionInventory_for_GLPI/  Installation & update/1.installation.md
@@ -1,32 +1,32 @@
-# Installation
+# 安装
 
-## Get the archive for your GLPI
+## 下载文件到你的GLPI服务器
 
-First, download archive: 
+第一,下载文件: 
 
-* Recent versions (>= 0.90) : <https://github.com/fusioninventory/fusioninventory-for-glpi/releases>
+* 最近更新的版本 (>= 0.90) : <https://github.com/fusioninventory/fusioninventory-for-glpi/releases>
 
-FusionInventory for GLPI tarball name follow this convention:
+下载至GLPI的FusionInventory的文件命名规则尊随以下习惯:
 
 * fusioninventory-for-glpi_
 * GLPI major release (0.80, 0.83, 0.84, 0.85, etc)
 * a '+' symbol
 * FusionInventory release
 
-!!! example "Examples"
+!!! 示例 "示例"
     * 9.5+4.0
 
     * 10.0.0+1.0
 
-## Installation
+## 安装
 
-!!! warning
+!!! 警告
     If a previous FusionInventory version is already installed, you must read the [Update page](./2.update.md).
 
-!!! important
-    Please, do a backup of your database before install :sweat_smile:
+!!! 重要的
+    请在安装前备份你的数据库：sweat_smile:
 
-* Uncompress the archive into the plugin folder of GLPI. File list looks like:
+* 将下载的压缩文件解压至你的GLPI插件文件夹中。文件列表示例如下：
 
 ```
 |- glpi
@@ -72,7 +72,7 @@ In general configuration of the plugin FusionInventory for GLPI, there are the o
 
 SSL-only for agent: send an error response to an agent when this agent communicates to the server without SSL.
 
-## Security
+## 安全
 
 !!! important
     We strongly recommend to activate SSL on the server side to protect human user communications, and eventually agent communications too.
@@ -83,7 +83,7 @@ See [security page](../../Advanced_topics/security.md) for details.
 
 It's very important for tasks management, see [cron in GLPI](./3.cron.md) for details.
 
-## Agent configuration
+## 代理配置
 
 Once this is done, you can [install](../../ FusionInventory_agent/   Installation/) and [configure](../../ FusionInventory_agent/  Configuration/configuration.md) your agents.
 
